src/libnx/wrapper/hid.nim


##  static_assert(sizeof(HidTouchScreen) == 0x3000, "Hid touch screen structure has incorrect size");
##  End HidTouchScreen
##  Begin HidMouse

type
  HidMouseHeader* {.importc: "HidMouseHeader", header: headerhid, bycopy.} = object
    timestampTicks* {.importc: "timestampTicks".}: uint64
    numEntries* {.importc: "numEntries".}: uint64
    latestEntry* {.importc: "latestEntry".}: uint64
    maxEntryIndex* {.importc: "maxEntryIndex".}: uint64


##  static_assert(sizeof(HidMouseHeader) == 0x20, "Hid mouse header structure has incorrect size");

type
  HidMouseEntry* {.importc: "HidMouseEntry", header: headerhid, bycopy.} = object
    timestamp* {.importc: "timestamp".}: uint64
    timestamp_2* {.importc: "timestamp_2".}: uint64
    position* {.importc: "position".}: MousePosition
    buttons* {.importc: "buttons".}: uint64


##  static_assert(sizeof(HidMouseEntry) == 0x30, "Hid mouse entry structure has incorrect size");

type
  HidMouse* {.importc: "HidMouse", header: headerhid, bycopy.} = object
    header* {.importc: "header".}: HidMouseHeader
    entries* {.importc: "entries".}: array[17, HidMouseEntry]
    padding* {.importc: "padding".}: array[0x000000B0, uint8]


##  static_assert(sizeof(HidMouse) == 0x400, "Hid mouse structure has incorrect size");
##  End HidMouse
##  Begin HidKeyboard

type
  HidKeyboardHeader* {.importc: "HidKeyboardHeader", header: headerhid, bycopy.} = object
    timestampTicks* {.importc: "timestampTicks".}: uint64
    numEntries* {.importc: "numEntries".}: uint64
    latestEntry* {.importc: "latestEntry".}: uint64
    maxEntryIndex* {.importc: "maxEntryIndex".}: uint64


##  static_assert(sizeof(HidKeyboardHeader) == 0x20, "Hid keyboard header structure has incorrect size");

type
  HidKeyboardEntry* {.importc: "HidKeyboardEntry", header: headerhid, bycopy.} = object
    timestamp* {.importc: "timestamp".}: uint64
    timestamp_2* {.importc: "timestamp_2".}: uint64
    modifier* {.importc: "modifier".}: uint64
    keys* {.importc: "keys".}: array[8, uint32]


##  static_assert(sizeof(HidKeyboardEntry) == 0x38, "Hid keyboard entry structure has incorrect size");

type
  HidKeyboard* {.importc: "HidKeyboard", header: headerhid, bycopy.} = object
    header* {.importc: "header".}: HidKeyboardHeader
    entries* {.importc: "entries".}: array[17, HidKeyboardEntry]
    padding* {.importc: "padding".}: array[0x00000028, uint8]


##  static_assert(sizeof(HidKeyboard) == 0x400, "Hid keyboard structure has incorrect size");
##  End HidKeyboard
##  Begin HidController

type
  HidControllerMAC* {.importc: "HidControllerMAC", header: headerhid, bycopy.} = object
    timestamp* {.importc: "timestamp".}: uint64
    mac* {.importc: "mac".}: array[0x00000008, uint8]
    unk* {.importc: "unk".}: uint64
    timestamp_2* {.importc: "timestamp_2".}: uint64


##  static_assert(sizeof(HidControllerMAC) == 0x20, "Hid controller MAC structure has incorrect size");

type
  HidControllerHeader* {.importc: "HidControllerHeader", header: headerhid, bycopy.} = object
    `type`* {.importc: "type".}: uint32
    isHalf* {.importc: "isHalf".}: uint32
    singleColorsDescriptor* {.importc: "singleColorsDescriptor".}: uint32
    singleColorBody* {.importc: "singleColorBody".}: uint32
    singleColorButtons* {.importc: "singleColorButtons".}: uint32
    splitColorsDescriptor* {.importc: "splitColorsDescriptor".}: uint32
    leftColorBody* {.importc: "leftColorBody".}: uint32
    leftColorButtons* {.importc: "leftColorButtons".}: uint32
    rightColorBody* {.importc: "rightColorBody".}: uint32
    rightColorbuttons* {.importc: "rightColorbuttons".}: uint32


##  static_assert(sizeof(HidControllerHeader) == 0x28, "Hid controller header structure has incorrect size");

type
  HidControllerLayoutHeader* {.importc: "HidControllerLayoutHeader",
                              header: headerhid, bycopy.} = object
    timestampTicks* {.importc: "timestampTicks".}: uint64
    numEntries* {.importc: "numEntries".}: uint64
    latestEntry* {.importc: "latestEntry".}: uint64
    maxEntryIndex* {.importc: "maxEntryIndex".}: uint64


##  static_assert(sizeof(HidControllerLayoutHeader) == 0x20, "Hid controller layout header structure has incorrect size");

type
  HidControllerInputEntry* {.importc: "HidControllerInputEntry", header: headerhid,
                            bycopy.} = object
    timestamp* {.importc: "timestamp".}: uint64
    timestamp_2* {.importc: "timestamp_2".}: uint64
    buttons* {.importc: "buttons".}: uint64
    joysticks* {.importc: "joysticks".}: array[JOYSTICK_NUM_STICKS, JoystickPosition]
    connectionState* {.importc: "connectionState".}: uint64


##  static_assert(sizeof(HidControllerInputEntry) == 0x30, "Hid controller input entry structure has incorrect size");

type
  HidControllerLayout* {.importc: "HidControllerLayout", header: headerhid, bycopy.} = object
    header* {.importc: "header".}: HidControllerLayoutHeader
    entries* {.importc: "entries".}: array[17, HidControllerInputEntry]


##  static_assert(sizeof(HidControllerLayout) == 0x350, "Hid controller layout structure has incorrect size");

type
  HidController* {.importc: "HidController", header: headerhid, bycopy.} = object
    header* {.importc: "header".}: HidControllerHeader
    layouts* {.importc: "layouts".}: array[7, HidControllerLayout]
    unk_1* {.importc: "unk_1".}: array[0x00002A70, uint8]
    macLeft* {.importc: "macLeft".}: HidControllerMAC
    macRight* {.importc: "macRight".}: HidControllerMAC
    unk_2* {.importc: "unk_2".}: array[0x00000DF8, uint8]


##  static_assert(sizeof(HidController) == 0x5000, "Hid controller structure has incorrect size");
##  End HidController

type
  HidSharedMemory* {.importc: "HidSharedMemory", header: headerhid, bycopy.} = object
    header* {.importc: "header".}: array[0x00000400, uint8]
    touchscreen* {.importc: "touchscreen".}: HidTouchScreen
    mouse* {.importc: "mouse".}: HidMouse
    keyboard* {.importc: "keyboard".}: HidKeyboard
    unkSection1* {.importc: "unkSection1".}: array[0x00000400, uint8]
    unkSection2* {.importc: "unkSection2".}: array[0x00000400, uint8]
    unkSection3* {.importc: "unkSection3".}: array[0x00000400, uint8]
    unkSection4* {.importc: "unkSection4".}: array[0x00000400, uint8]
    unkSection5* {.importc: "unkSection5".}: array[0x00000200, uint8]
    unkSection6* {.importc: "unkSection6".}: array[0x00000200, uint8]
    unkSection7* {.importc: "unkSection7".}: array[0x00000200, uint8]
    unkSection8* {.importc: "unkSection8".}: array[0x00000800, uint8]
    controllerSerials* {.importc: "controllerSerials".}: array[0x00004000, uint8]
    controllers* {.importc: "controllers".}: array[10, HidController]
    unkSection9* {.importc: "unkSection9".}: array[0x00004600, uint8]


##  static_assert(sizeof(HidSharedMemory) == 0x40000, "Hid Shared Memory structure has incorrect size");

type
  HidVibrationDeviceInfo* {.importc: "HidVibrationDeviceInfo", header: headerhid,
                           bycopy.} = object
    unk_x0* {.importc: "unk_x0".}: uint32
    unk_x4* {.importc: "unk_x4".}: uint32 ## /< 0x1 for left-joycon, 0x2 for right-joycon.
  

##  static_assert(sizeof(HidVibrationDeviceInfo) == 0x8, "Hid VibrationDeviceInfo structure has incorrect size");

type
  HidVibrationValue* {.importc: "HidVibrationValue", header: headerhid, bycopy.} = object
    amp_low* {.importc: "amp_low".}: cfloat ## /< Low Band amplitude. 1.0f: Max amplitude.
    freq_low* {.importc: "freq_low".}: cfloat ## /< Low Band frequency in Hz.
    amp_high* {.importc: "amp_high".}: cfloat ## /< High Band amplitude. 1.0f: Max amplitude.
    freq_high* {.importc: "freq_high".}: cfloat ## /< High Band frequency in Hz.
  

##  static_assert(sizeof(HidVibrationValue) == 0x10, "Hid VibrationValue structure has incorrect size");

proc hidInitialize*(): Result {.cdecl, importc: "hidInitialize", header: headerhid.}
proc hidExit*() {.cdecl, importc: "hidExit", header: headerhid.}
proc hidReset*() {.cdecl, importc: "hidReset", header: headerhid.}
proc hidGetSessionService*(): ptr Service {.cdecl, importc: "hidGetSessionService",
                                        header: headerhid.}
proc hidGetSharedmemAddr*(): pointer {.cdecl, importc: "hidGetSharedmemAddr",
                                    header: headerhid.}
proc hidSetControllerLayout*(id: HidControllerID;
                            layoutType: HidControllerLayoutType) {.cdecl,
    importc: "hidSetControllerLayout", header: headerhid.}
proc hidGetControllerLayout*(id: HidControllerID): HidControllerLayoutType {.
    cdecl, importc: "hidGetControllerLayout", header: headerhid.}
proc hidScanInput*() {.cdecl, importc: "hidScanInput", header: headerhid.}
proc hidKeysHeld*(id: HidControllerID): uint64 {.cdecl, importc: "hidKeysHeld",
    header: headerhid.}
proc hidKeysDown*(id: HidControllerID): uint64 {.cdecl, importc: "hidKeysDown",
    header: headerhid.}
proc hidKeysUp*(id: HidControllerID): uint64 {.cdecl, importc: "hidKeysUp",
                                        header: headerhid.}
proc hidMouseButtonsHeld*(): uint64 {.cdecl, importc: "hidMouseButtonsHeld",
                                header: headerhid.}
proc hidMouseButtonsDown*(): uint64 {.cdecl, importc: "hidMouseButtonsDown",
                                header: headerhid.}
proc hidMouseButtonsUp*(): uint64 {.cdecl, importc: "hidMouseButtonsUp",
                              header: headerhid.}
proc hidMouseRead*(pos: ptr MousePosition) {.cdecl, importc: "hidMouseRead",
    header: headerhid.}
proc hidKeyboardModifierHeld*(modifier: HidKeyboardModifier): bool {.cdecl,
    importc: "hidKeyboardModifierHeld", header: headerhid.}
proc hidKeyboardModifierDown*(modifier: HidKeyboardModifier): bool {.cdecl,
    importc: "hidKeyboardModifierDown", header: headerhid.}
proc hidKeyboardModifierUp*(modifier: HidKeyboardModifier): bool {.cdecl,
    importc: "hidKeyboardModifierUp", header: headerhid.}
proc hidKeyboardHeld*(key: HidKeyboardScancode): bool {.cdecl,
    importc: "hidKeyboardHeld", header: headerhid.}
proc hidKeyboardDown*(key: HidKeyboardScancode): bool {.cdecl,
    importc: "hidKeyboardDown", header: headerhid.}
proc hidKeyboardUp*(key: HidKeyboardScancode): bool {.cdecl,
    importc: "hidKeyboardUp", header: headerhid.}
proc hidTouchCount*(): uint32 {.cdecl, importc: "hidTouchCount", header: headerhid.}
proc hidTouchRead*(pos: ptr touchPosition; point_id: uint32) {.cdecl,
    importc: "hidTouchRead", header: headerhid.}
proc hidJoystickRead*(pos: ptr JoystickPosition; id: HidControllerID;
                     stick: HidControllerJoystick) {.cdecl,
    importc: "hidJoystickRead", header: headerhid.}
## / This can be used to check what CONTROLLER_P1_AUTO uses.
## / Returns 0 when CONTROLLER_PLAYER_1 is connected, otherwise returns 1 for handheld-mode.

proc hidGetHandheldMode*(): bool {.cdecl, importc: "hidGetHandheldMode",
                                header: headerhid.}
## / Use this if you want to use a single joy-con as a dedicated CONTROLLER_PLAYER_*.
## / When used, both joy-cons in a pair should be used with this (CONTROLLER_PLAYER_1 and CONTROLLER_PLAYER_2 for example).
## / id must be CONTROLLER_PLAYER_*.

proc hidSetNpadJoyAssignmentModeSingleByDefault*(id: HidControllerID): Result {.
    cdecl, importc: "hidSetNpadJoyAssignmentModeSingleByDefault",
    header: headerhid.}
## / Use this if you want to use a pair of joy-cons as a single CONTROLLER_PLAYER_*. Only necessary if you want to use this mode in your application after \ref hidSetNpadJoyAssignmentModeSingleByDefault was used with this pair of joy-cons.
## / Used automatically during app startup/exit for all controllers.
## / When used, both joy-cons in a pair should be used with this (CONTROLLER_PLAYER_1 and CONTROLLER_PLAYER_2 for example).
## / id must be CONTROLLER_PLAYER_*.
